common/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: calculadora-ingress
  namespace: namespace-jrojas
spec:
  rules:
  - host: calculadora.apps-crc.testing
    http:
      paths:
      - path: /sumar
        pathType: Prefix
        backend:
          service:
            name: deployment-sumar
            port:
              number: 80
      - path: /multiplicar
        pathType: Prefix
        backend:
          service:
            name: deployment-multiplicar
            port:
              number: 80
